Fix 04 to appveyor.yaml
Signed-off-by: Chris Wahl <github@wahlnetwork.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,7 @@
 install:
   - ps: cinst pester -y
+
+build_script:
   - ps: Copy-Item "C:\projects\powershell-module\Rubrik" "C:\Program Files\WindowsPowerShell\Modules"
 
 test_script:
