--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,4 +4,6 @@ install:
 build: off
 
 test_script:
-  - ps: . .\Tests\Connect-Rubrik.Tests.ps1 -Test
+  - ps: $res = Invoke-Pester -Path ".\Tests" -OutputFormat NUnitXml -OutputFile TestsResults.xml -PassThru
+  - ps: (New-Object 'System.Net.WebClient').UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestsResults.xml))
+  - ps: if ($res.FailedCount -gt 0) { throw "$($res.FailedCount) tests failed."}
