--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,24 +1,46 @@
-version: 1.0.6.{build}
+#          YAML Reference Guide: https://www.appveyor.com/docs/appveyor-yml/
+# Environmental Variables Guide: https://www.appveyor.com/docs/environment-variables/
+#                YAML Validator: https://ci.appveyor.com/tools/validate-yaml
 
-branches:
-  only:
-  - master
-
-environment:
-  NuGetApiKey:
-    secure: vPcmFNoIOhHHHo2LtrM0IKNcNwXYqmw2C6viMFZ8ea6BJ5SIXsAjJ0zUcKeT+w3p
-
-os: WMF 5
-
-skip_commits:
-  message: /updated readme.*|update readme.*s|update docs.*|update appveyor.*/
-
-install:
-  - ps: cinst pester -y
-
+# Disable automatic builds
+# Without this, the following error shows up:
+# "Specify a project or solution file. The directory does not contain a project or solution file."
 build: off
 
+# Ignore testing a commit if only the README.md file changed
+# Or if various strings are found in the commit message: updated readme, update readme, update docs, update appveyor
+skip_commits:
+  files:
+    - README.md
+  message: /updated readme.*|update readme.*s|update docs.*|update appveyor.*/
+
+# There's no need to alter the build number for a Pull Request (PR) since they don't modify anything
+pull_requests:
+  do_not_increment_build_number: true
+
+# PowerShell Gallery API key for publishing an update to the module
+# The "secure:" value is the Appveyor encryption of the key
+environment:
+  NuGetApiKey:
+    secure: vPcmFNoIOhHHHo2LtrM0IKNcNwXYqmw2C6viMFZ8ea6BJ5SIXsAjJ0zUcKeT+w3p    
+
+# Install NuGet to interact with the PowerShell Gallery
+install:
+- ps: |
+    Install-PackageProvider -Name NuGet -Force | Out-Null
+    Install-Module -Name Pester -Force
+
+# Invoke Pester to run all of the unit tests, then save the results into XML in order to populate the AppVeyor tests section
+# If any of the tests fail, consider the pipeline failed
 test_script:
   - ps: $res = Invoke-Pester -Path ".\Tests" -OutputFormat NUnitXml -OutputFile TestsResults.xml -PassThru
   - ps: (New-Object 'System.Net.WebClient').UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestsResults.xml))
   - ps: if ($res.FailedCount -gt 0) { throw "$($res.FailedCount) tests failed."}
+
+# Post a status update in Slack
+# The "secure:" value is the Appveyor encryption of my Slack API token
+notifications:
+  - provider: Slack
+    auth_token:
+      secure: yQPq/S0cfzVJIh21/TjHksPc9BNJXLh2Uh4xVxSFijhgSY/RQi4YZDNFkN0bdhXm
+    channel: '#powershell-test'
