--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,12 +7,15 @@
 # "Specify a project or solution file. The directory does not contain a project or solution file."
 build: off
 
+# Version number
+version: 3.1.0.{build}
+
 # Ignore testing a commit if only the README.md file changed
-# Or if various strings are found in the commit message: updated readme, update readme, update docs, update appveyor
+# Or if various strings are found in the commit message: updated readme, update readme, update docs, update version, update appveyor
 skip_commits:
   files:
     - README.md
-  message: /updated readme.*|update readme.*s|update docs.*|update appveyor.*/
+  message: /updated readme.*|update readme.*s|update docs.*|update version.*|update appveyor.*/
 
 # There's no need to alter the build number for a Pull Request (PR) since they don't modify anything
 pull_requests:
@@ -22,13 +25,16 @@ pull_requests:
 # The "secure:" value is the Appveyor encryption of the key
 environment:
   NuGetApiKey:
-    secure: vPcmFNoIOhHHHo2LtrM0IKNcNwXYqmw2C6viMFZ8ea6BJ5SIXsAjJ0zUcKeT+w3p    
+    secure: vPcmFNoIOhHHHo2LtrM0IKNcNwXYqmw2C6viMFZ8ea6BJ5SIXsAjJ0zUcKeT+w3p
+  GitHubKey:
+    secure: aTZkOm9umaTs73LWnGpo/tyn0RN0Eq2oRs35iAxYZa6zL2qIW/yx5rouLNaG3uQp
 
 # Install NuGet to interact with the PowerShell Gallery
 install:
 - ps: |
     Install-PackageProvider -Name NuGet -Force | Out-Null
     Install-Module -Name Pester -Force
+    Install-Module -Name posh-git -Force
 
 # Invoke Pester to run all of the unit tests, then save the results into XML in order to populate the AppVeyor tests section
 # If any of the tests fail, consider the pipeline failed
@@ -36,6 +42,11 @@ test_script:
   - ps: $res = Invoke-Pester -Path ".\Tests" -OutputFormat NUnitXml -OutputFile TestsResults.xml -PassThru
   - ps: (New-Object 'System.Net.WebClient').UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestsResults.xml))
   - ps: if ($res.FailedCount -gt 0) { throw "$($res.FailedCount) tests failed."}
+  - git config --global credential.helper store
+  - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:GitHubKey):x-oauth-basic@github.com`n"
+  - git config --global user.email "github@wahlnetwork.com"
+  - git config --global user.name "Chris Wahl"  
+  - ps: . .\Tests\build.ps1
 
 # Post a status update in Slack
 # The "secure:" value is the Appveyor encryption of my Slack API token
