--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,8 @@ build: off
 # Version number
 version: 4.0.0.{build}
 
+image: Visual Studio 2017
+
 # Ignore testing a commit if only the README.md file changed
 # Or if various strings are found in the commit message: updated readme, update readme, update docs, update version, update appveyor
 skip_commits:
