Fix build script

--- a/azure-pipelines/azure-pipelines.yml
+++ b/azure-pipelines/azure-pipelines.yml
@@ -18,5 +18,6 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 
-  - script: |
+- script: |
     echo $Build.SourceBranch
+  displayName: 'Display environment variables'
