All environment vars

--- a/azure-pipelines/azure-pipelines.yml
+++ b/azure-pipelines/azure-pipelines.yml
@@ -19,5 +19,38 @@ steps:
   displayName: 'Run a multi-line script'
 
 - script: |
+    echo $(Build.ArtifactStagingDirectory)
+    echo $(Build.BuildId)
+    echo $(Build.BuildNumber)
+    echo $(Build.BuildUri)
+    echo $(Build.BinariesDirectory)
+    echo $(Build.DefinitionName)
+    echo $(Build.DefinitionVersion)
+    echo $(Build.QueuedBy)
+    echo $(Build.QueuedById)
+    echo $(Build.Reason)
+    echo $(Build.Repository.Clean)
+    echo $(Build.Repository.LocalPath)
+    echo $(Build.Repository.ID)
+    echo $(Build.Repository.Name)
+    echo $(Build.Repository.Provider)
+    echo $(Build.Repository.Tfvc.Workspace)
+    echo $(Build.Repository.Uri)
+    echo $(Build.RequestedFor)
+    echo $(Build.RequestedForEmail)
+    echo $(Build.RequestedForId)
     echo $(Build.SourceBranch)
+    echo $(Build.SourceBranchName)
+    echo $(Build.SourcesDirectory)
+    echo $(Build.SourceVersion)
+    echo $(Build.SourceVersionMessage)
+    echo $(Build.StagingDirectory)
+    echo $(Build.Repository.Git.SubmoduleCheckout)
+    echo $(Build.SourceTfvcShelveset)
+    echo $(Build.TriggeredBy.BuildId)
+    echo $(Build.TriggeredBy.DefinitionId)
+    echo $(Build.TriggeredBy.DefinitionName)
+    echo $(Build.TriggeredBy.BuildNumber)
+    echo $(Build.TriggeredBy.ProjectID)
+    echo $(Common.TestResultsDirectory)
   displayName: 'Display environment variables'
