--- a/azure-pipelines/azure-pipelines.yml
+++ b/azure-pipelines/azure-pipelines.yml
@@ -68,7 +68,13 @@ jobs:
     vmImage: 'windows-2019'
   steps:
   - task: PowerShell@2
-    displayName: 'Run PowerShell Core tests on Windows 2019'
+    displayName: 'Install pre-reqs'
+    inputs:
+      pwsh: false
+      targetType: Inline
+      script: ./azure-pipelines/scripts/install.ps1
+  - task: PowerShell@2
+    displayName: 'Deployment scripts'
     inputs:
       pwsh: false
       targetType: Inline
