--- a/azure-pipelines/azure-pipelines-master-merge.yml
+++ b/azure-pipelines/azure-pipelines-master-merge.yml
@@ -6,7 +6,7 @@ pr: none
 
 jobs:
 - job: Verify_Skip_CI_Not_Present
-  displayname: "Verify is [skip ci] is not specified"
+  displayname: 'Verify is [skip ci] is not specified'
   pool:
     vmImage: 'ubuntu-latest'
   steps:
@@ -53,7 +53,7 @@ jobs:
     condition: failed()
     
 - job: Commit_Changes_From_DevOps_To_GitHub
-  displayname: "Commit Changes From DevOps To GitHub"
+  displayname: 'Commit Changes From DevOps To GitHub'
   dependsOn: Build_Using_Windows_PowerShell_on_Server_2019
   pool:
     vmImage: 'ubuntu-latest'
