--- a/azure-pipelines/azure-pipelines-devel-merge.yml
+++ b/azure-pipelines/azure-pipelines-devel-merge.yml
@@ -47,7 +47,7 @@ jobs:
     inputs:
       artifactName: 'PipelinesScripts'
       targetPath: .
-    condition: failed()
+    condition: always()
     
 - job: Commit_Changes_From_DevOps_To_GitHub
   displayname: 'Commit Changes From DevOps To GitHub'
@@ -59,5 +59,5 @@ jobs:
     persistCredentials: true
   - task: ShellScript@2
     inputs:
-      scriptPath: ./azure-pipelines/scripts/git-devel-merge.sh
+      scriptPath: hostname
     
