Fixed master-merge yml

--- a/azure-pipelines/azure-pipelines-master-merge.yml
+++ b/azure-pipelines/azure-pipelines-master-merge.yml
@@ -6,15 +6,15 @@ pr: none
 
 jobs:
 - job: Verify_Skip_CI_Not_Present
-  displayname: 'Verify is [skip ci] is not specified'
+  displayName: 'Verify is [skip ci] is not specified'
   pool:
     vmImage: 'ubuntu-latest'
   steps:
   - checkout: self
     persistCredentials: true
   - task: ShellScript@2
-  inputs:
-    scriptPath: ./azure-pipelines/scripts/git-check-skipci.sh
+    inputs:
+      scriptPath: ./azure-pipelines/scripts/git-check-skipci.sh
     
 - job: Build_Using_Windows_PowerShell_on_Server_2019
   displayName: 'Build Using Windows PowerShell on Server 2019'
@@ -49,7 +49,7 @@ jobs:
     condition: failed()
     
 - job: Commit_Changes_From_DevOps_To_GitHub
-  displayname: 'Commit Changes From DevOps To GitHub'
+  displayName: 'Commit Changes From DevOps To GitHub'
   dependsOn: Build_Using_Windows_PowerShell_on_Server_2019
   pool:
     vmImage: 'ubuntu-latest'
@@ -57,5 +57,5 @@ jobs:
   - checkout: self
     persistCredentials: true
   - task: ShellScript@2
-  inputs:
-    scriptPath: ./azure-pipelines/scripts/git-master-merge.sh
+    inputs:
+      scriptPath: ./azure-pipelines/scripts/git-master-merge.sh
